changes to adapt to new ExperimentHub package restfulSEData.
Former-commit-id: e3676958055578c83e245eb8b5b9bf632223b7cf [formerly 7199b59cd46a8e363a8d78b77937a764f1ca8762 [formerly e3676958055578c83e245eb8b5b9bf632223b7cf [formerly b948f499e88852a078751120295cb43e2b0af6f2]]] [formerly c79b93d0a95f886c2e87e01dc049ab1b43e2b867 [formerly 90e1e5d8026fcf1dcaeb83876c44f448a29d6a40] [formerly 242e36384ae7bc29a98552f4ea9e63e05678199b [formerly 5246239833c70208999991a50b012052b34773a1]] [formerly 5564d5da92d7e26bd2a8c2912b98b4d03c109646 [formerly 8bf91d54a80938e6f966df10169b91dcf09980c5] [formerly 1a4b2d99e8c5405f9b326f360166cb4678f9603b [formerly b212fe74079403e89d3129b78a7942ebab04d634]]] [formerly 36d43691d71baa553782ca9b9ed04cfe7200276b [formerly 94bc21250bbb0194630c0d65f735438332251e67]] [formerly 3117f9e8f43e9a20a6c2de4d8acda31f5e2ed918 [formerly 95c21aabf26718c22db8473ec30bbbbd4636506c] [formerly d1f530f395ca137bdf0de32cee83898c719893e3 [formerly 5364a39a5c9dcf012746d3944a45bc9f16bb3fae]] [formerly 3117f9e8f43e9a20a6c2de4d8acda31f5e2ed918 [formerly 95c21aabf26718c22db8473ec30bbbbd4636506c] [formerly d1f530f395ca137bdf0de32cee83898c719893e3 [formerly 5364a39a5c9dcf012746d3944a45bc9f16bb3fae]] [formerly 36d43691d71baa553782ca9b9ed04cfe7200276b [formerly 94bc21250bbb0194630c0d65f735438332251e67] [formerly 0dd744a340b1acef509e140d69d5caed1b98c713]]]] [formerly c79b93d0a95f886c2e87e01dc049ab1b43e2b867 [formerly 90e1e5d8026fcf1dcaeb83876c44f448a29d6a40] [formerly 242e36384ae7bc29a98552f4ea9e63e05678199b [formerly 5246239833c70208999991a50b012052b34773a1]] [formerly 5564d5da92d7e26bd2a8c2912b98b4d03c109646 [formerly 8bf91d54a80938e6f966df10169b91dcf09980c5] [formerly 1a4b2d99e8c5405f9b326f360166cb4678f9603b [formerly b212fe74079403e89d3129b78a7942ebab04d634]]] [formerly 36d43691d71baa553782ca9b9ed04cfe7200276b [formerly 94bc21250bbb0194630c0d65f735438332251e67]] [formerly 3117f9e8f43e9a20a6c2de4d8acda31f5e2ed918 [formerly 95c21aabf26718c22db8473ec30bbbbd4636506c] [formerly d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(isbCgcTables)
 export(se1.3M)
 export(se100k)
 export(seByTumor)
+export(tasicCortex)
 exportClasses(BQSummarizedExperiment)
 exportClasses(RESTfulSummarizedExperiment)
 exportMethods("[")
@@ -18,6 +19,7 @@ exportMethods(assayNames)
 exportMethods(assays)
 exportMethods(dim)
 import(DBI)
+import(ExperimentHub)
 import(GO.db)
 import(SummarizedExperiment)
 import(rhdf5client)
