--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
 Description: This package provides functions and classes to interface with remote data stores by operating on SummarizedExperiment-like objects.
-Version: 0.99.12
+Version: 0.99.13
 Authors@R: c(
  person("Vincent", "Carey", role = c("aut"), email = "stvjc@channing.harvard.edu"),
  person("Shweta", "Gopaulakrishnan", role = c("cre","aut"), email = "reshg@channing.harvard.edu")
  )
-Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db, restfulSEData, BiocStyle
+Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db, BiocStyle
 Imports: utils, stats, methods, S4Vectors,
 	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db, 
-        rhdf5client, dplyr (>= 0.7.1), magrittr, bigrquery
+        rhdf5client, dplyr (>= 0.7.1), magrittr, bigrquery, ExperimentHub, AnnotationHub
 Depends: R (>= 3.4), SummarizedExperiment
 License: Artistic-2.0
 LazyLoad: yes
