--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,7 @@ import(DelayedArray)
 import(ExperimentHub)
 import(GO.db)
 import(SummarizedExperiment)
-import(rhdf5client)
+import(rhdf5client, except = groups)
 importClassesFrom(rhdf5client,H5S_dataset)
 importFrom("methods", "as", "is", "new", "slot", "slot<-", "validObject")
 importFrom(AnnotationDbi,keys)
@@ -45,7 +45,10 @@ importFrom(bigrquery,dbConnect)
 importFrom(bigrquery,dbi_driver)
 importFrom(dplyr,filter)
 importFrom(dplyr,filter_)
+importFrom(dplyr,group_by_)
 importFrom(dplyr,one_of)
+importFrom(dplyr,select_)
+importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
 importFrom(magrittr,"%>%")
 importFrom(reshape2,dcast)
