--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
 Description: This package provides functions and classes to interface with remote data stores by operating on SummarizedExperiment-like objects.
-Version: 1.1.3006
+Version: 1.1.3007
 Authors@R: c(
  person("Vincent", "Carey", role = c("aut"), email = "stvjc@channing.harvard.edu"),
  person("Shweta", "Gopaulakrishnan", role = c("cre","aut"), email = "reshg@channing.harvard.edu")
  )
 Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db, BiocStyle
-Imports: utils, stats, methods, S4Vectors,
+Imports: utils, stats, methods, S4Vectors, Biobase,
 	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db, 
         rhdf5client, dplyr (>= 0.7.1), magrittr, bigrquery, ExperimentHub, AnnotationHub
 Depends: R (>= 3.5), SummarizedExperiment
