adding BQM* delayed matrix support
Former-commit-id: 31a2531ad22d8d23df93b1cf86e8131949626722

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,11 @@
 export()
 export(BQ3_Array)
 export(BQ3_Source)
+export(BQM_Array)
+export(BQM_Source)
 export(H5S_Array)
 export(RESTfulSummarizedExperiment)
+export(bqConn)
 export(cgcConn)
 export(goPatt)
 export(gtexTiss)
@@ -17,6 +20,9 @@ export(tasicCortex)
 exportClasses(BQ3_Array)
 exportClasses(BQ3_Matrix)
 exportClasses(BQ3_Source)
+exportClasses(BQM_Array)
+exportClasses(BQM_Matrix)
+exportClasses(BQM_Source)
 exportClasses(BQSummarizedExperiment)
 exportClasses(H5S_Array)
 exportClasses(H5S_Matrix)
