general use of DelayedArray for all constructed SummarizedExperiment instances in demo.R etc.  Some additional evaluations in the vignette
Former-commit-id: a0164c75d7e76ce18079ade9d135fb1cd9fed1d5

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(goPatt)
 export(gtexTiss)
 export(isbCgcDatasets)
 export(isbCgcTables)
+export(pancan_SE)
 export(se1.3M)
 export(se100k)
 export(seByTumor)
@@ -57,9 +58,12 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
 importFrom(magrittr,"%>%")
 importFrom(reshape2,dcast)
+importFrom(rhdf5client,H5S_Array)
 importFrom(rhdf5client,internalDim)
 importFrom(rhdf5client,isplit)
 importFrom(rhdf5client,sproc)
+importFrom(rlang,UQ)
+importFrom(rlang,sym)
 importFrom(stats,as.formula)
 importFrom(utils,data)
 importFrom(utils,head)
