no more warnings
Former-commit-id: 23cffb326aefddcced213d59e336fb202ed93be0 [formerly 3687ae97416273ca75f113983a3d3e8a3561a690 [formerly 053eb67da1e9a3027a803d0515f72b4801766f11]] [formerly c43c2212a95f9290a4fe5899ae06b2ec12cc1ce9 [formerly 6c8da563af08c2fe64ab0afe741eba29390a172d] [formerly cfa6ccd2d8412f351feaa4bb0c48c0831d60c4a0 [formerly 5f03a54b72ac6d9d830fb22fd4c5a04f5c01be35]] [formerly c43c2212a95f9290a4fe5899ae06b2ec12cc1ce9 [formerly 6c8da563af08c2fe64ab0afe741eba29390a172d] [formerly cfa6ccd2d8412f351feaa4bb0c48c0831d60c4a0 [formerly 5f03a54b72ac6d9d830fb22fd4c5a04f5c01be35]] [formerly 3687ae97416273ca75f113983a3d3e8a3561a690 [formerly 053eb67da1e9a3027a803d0515f72b4801766f11] [formerly ecb5c245f520e1fc7717cddd7986162d2b5b9217 [formerly 99978937c5c493886b8dc478736fbb4acd15b0cd]]]]]
Former-commit-id: eb08b438092505365b4868d390af7918b5ea3193 [formerly ecb5c245f520e1fc7717cddd7986162d2b5b9217]
Former-commit-id: 2e465cb142e66397f13bce86e8f13efa55d3eea5
Former-commit-id: f7e324ab0b26e9e98e21bc6d00c953b17bda2ae6 [formerly ebf90d3eb8ece5a52e15144b5962ebac26888f34] [formerly 4890d98bba7064380f7230447754b727b5a14987 [formerly 55b85e701fed12dea5389d33c53fe2501f5d595b]]
Former-commit-id: 1148e452d741f273ab0fa28bdb39b460769b35f3 [formerly eeaa471a1dacc680788b2772d31706d991a5b74b]
Former-commit-id: f4c24716ac950af7369d6b6035b42b8bfafa0c50

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,14 +38,17 @@ import(ExperimentHub)
 import(GO.db)
 import(SummarizedExperiment)
 import(rhdf5client, except = groups)
+importClassesFrom("DelayedArray", "DelayedArray")
 importClassesFrom(rhdf5client,H5S_dataset)
 importFrom("methods", "as", "is", "new", "slot", "slot<-", "validObject")
 importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
 importFrom(Biobase,selectSome)
+importFrom(DelayedArray,matrixClass)
 importFrom(DelayedArray,rowRanges)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,new2)
 importFrom(bigrquery,dbConnect)
 importFrom(bigrquery,dbi_driver)
 importFrom(dplyr,filter)
