--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,8 +49,8 @@ importFrom(DelayedArray,rowRanges)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
 importFrom(S4Vectors,new2)
+importFrom(bigrquery,bigquery)
 importFrom(bigrquery,dbConnect)
-importFrom(bigrquery,dbi_driver)
 importFrom(dplyr,filter)
 importFrom(dplyr,filter_)
 importFrom(dplyr,group_by_)
