this version addresses authentication issues with more doc and tryCatch
Former-commit-id: cc1bec9985f27b284efd8d00c05007c3f9f67f83 [formerly e92d8a11e5bd60a9413901eda7dec5727ee46d3a [formerly e92d8a11e5bd60a9413901eda7dec5727ee46d3a [formerly 55584ee0d2db97535b7116621c4505ea10125e7f]]] [formerly 8c6f9295b4bec02762f847fb38b07509ecd3e44c [formerly 2980854b214760a8bac3e9337625d6cd2f6e5ebf] [formerly 858fefb28f809d9e491cb9f67b4c240865c2ffd4 [formerly 7cdf12f85e67055dd8c21e2427e6d3a6d3c8dffc]] [formerly 37b172e481ba4b8b550c3193abccaff21462747a [formerly 00e7f2e003e9335903ab2f64e2332e5e9a407f1d] [formerly 5786878bedd9724a8ecca0696e3b1616572f800c [formerly c5f3d6cfd2b372902854bcb2ee8509dfabf84ae5]]] [formerly 3d049d83542ffa675de04867c1f5346e8900c7a1] [formerly a73eba4537bd2603094d905fa9e8c7cf3648b979 [formerly fd39e7c9236724b7c320a456ef2d06fcbf978b04]] [formerly 6f5c1fe704a856ecc9b0b98a8fcb80ed33de3cbb [formerly 26a196cc719434da1921610c024ca32f7ea49d80] [formerly 9a7120f5355b72bf843a3f238d8d2b22445625b8 [formerly 72e777e3117f47df8ca0e3facfceb6ebb6cf82b5]]] [formerly 439732abd28d714587870ad825da91b509398f71] [formerly e7dfcea3ca1d03394eb42e9e7a97f6d1317a3e97 [formerly e7dfcea3ca1d03394eb42e9e7a97f6d1317a3e97 [formerly dc8a339273c3b778f460e1779cb9d89a15e87350]] [formerly e7dfcea3ca1d03394eb42e9e7a97f6d1317a3e97 [formerly e7dfcea3ca1d03394eb42e9e7a97f6d1317a3e97 [formerly dc8a339273c3b778f460e1779cb9d89a15e87350]] [formerly 439732abd28d714587870ad825da91b509398f71 [formerly e7dfcea3ca1d03394eb42e9e7a97f6d1317a3e97 [formerly dc8a339273c3b778f460e1779cb9d89a15e87350] [formerly 439732abd28d714587870ad825da91b509398f71 [formerly a2f724196ad1f566536bd4bf680c98166aabd147]]]]]] [formerly 8c6f9295b4bec02762f847fb38b07509ecd3e44c [formerly 2980854b214760a8bac3e9337625d6cd2f6e5ebf] [formerly 858fefb28f809d9e491cb9f67b4c240865c2ffd4 [formerly 7cdf12f85e67055dd8c21e2427e6d3a6d3c8dffc]] [formerly 37b172e481ba4b8b550c3193abccaff21462747a [formerly 00e7f2e003e9335903ab2f64e2332e5e9a407f1d] 

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(BQ3_Source)
 export(BQM_Array)
 export(BQM_Source)
 export(RESTfulSummarizedExperiment)
+export(basic_clinvars)
 export(bqConn)
 export(cgcConn)
 export(goPatt)
@@ -42,7 +43,6 @@ importClassesFrom("DelayedArray", "DelayedArray")
 importClassesFrom(rhdf5client,H5S_dataset)
 importFrom("methods", "as", "is", "new", "slot", "slot<-", "validObject")
 importFrom(AnnotationDbi,keys)
-importFrom(AnnotationDbi,select)
 importFrom(Biobase,selectSome)
 importFrom(DelayedArray,matrixClass)
 importFrom(DelayedArray,rowRanges)
@@ -56,6 +56,7 @@ importFrom(dplyr,filter_)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,n)
 importFrom(dplyr,one_of)
+importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
