--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
 Description: This package provides functions and classes to interface with remote data stores by operating on SummarizedExperiment-like objects.
-Version: 1.5.0
+Version: 1.5.1
 Authors@R: c(
  person("Vincent", "Carey", role = c("aut"), email = "stvjc@channing.harvard.edu"),
  person("Shweta", "Gopaulakrishnan", role = c("cre","aut"), email = "reshg@channing.harvard.edu")
@@ -13,7 +13,7 @@ Imports: utils, stats, methods, S4Vectors, Biobase,reshape2, AnnotationDbi, DBI,
 Depends: R (>= 3.5), SummarizedExperiment,DelayedArray
 License: Artistic-2.0
 LazyLoad: yes
-biocViews: Infrastructure, SingleCell, Transcriptomics, Sequencing, Coverage
+biocViews: ImmunoOncology, Infrastructure, SingleCell, Transcriptomics, Sequencing, Coverage
 RoxygenNote: 6.1.0
 Collate: localReplaceSlots.R RESTfulSE.R demos.R seByTumor.R isbCgc.R BQ3_Array.R BQM_Array.R pancan_SE.R
 VignetteBuilder: knitr
