--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,11 @@ Authors@R: c(
  person("Vincent", "Carey", role = c("aut"), email = "stvjc@channing.harvard.edu"),
  person("Shweta", "Gopaulakrishnan", role = c("cre","aut"), email = "reshg@channing.harvard.edu")
  )
-Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db, BiocStyle
+Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db, BiocStyle, restfulSEData
 Imports: utils, stats, methods, S4Vectors, Biobase,reshape2, AnnotationDbi, DBI, GO.db, 
         rhdf5client, dplyr (>= 0.7.1), magrittr, bigrquery, ExperimentHub, AnnotationHub,
 	rlang
-Depends: R (>= 3.5), SummarizedExperiment,DelayedArray
+Depends: R (>= 3.6), SummarizedExperiment,DelayedArray
 License: Artistic-2.0
 LazyLoad: yes
 biocViews: Infrastructure, SingleCell, Transcriptomics, Sequencing, Coverage
